--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">モバイルアプリA</string>
+    <string name="text">Welcome!!</string>
+    <string name="text1">MainActivity!</string>
 </resources>
